review creation of the image (see omero:#1984)
git-svn-id: file:///home/svn/shoola-omero/trunk@7819 6f2cb1de-eb0d-0410-b157-e593188b5901